[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_atpneumatics"
description = "An LSST Telescope and Site package that provides a simulator for the auxiliary telescope pneumatics control system (ATPneumatics)."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { documentation = "https://ts-atpneumatics.lsst.io", repository = "https://github.com/lsst-ts/ts_atpneumatics" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
run_atpneumatics = "lsst.ts.atpneumatics:run_atpneumatics"

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
